# issueops-digest

./: .env.example  .gitignore  README.md  config.yaml  github_issue.py  mops_watcher.py  pyproject.toml  requirements.txt  web_digest.py
.github/workflows/: clipper.yml  mops_watcher.yml  scheduled_search.yml
tests/: test_github_issue.py  test_web_digest.py
